[gd_scene load_steps=7 format=3 uid="uid://d2orfl107kf37"]

[ext_resource type="Script" uid="uid://bblrmgd53n2i" path="res://scenes/artifact_handler/artifact_ui.gd" id="1_eck2d"]
[ext_resource type="Texture2D" uid="uid://cg1a3jk6tsa8f" path="res://art/More_kenney/tile_0028.png" id="2_tsibk"]
[ext_resource type="Material" uid="uid://d30aqi80c1nrc" path="res://art/white_sprite_material.tres" id="3_j848f"]

[sub_resource type="Animation" id="Animation_lujo1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_i53h1"]
resource_name = "flash"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon:material")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [null, null, ExtResource("3_j848f"), null, null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_btr66"]
_data = {
&"RESET": SubResource("Animation_lujo1"),
&"flash": SubResource("Animation_i53h1")
}

[node name="ArtifactUI" type="Control"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 3
anchors_preset = 0
offset_right = 20.0
offset_bottom = 20.0
script = ExtResource("1_eck2d")

[node name="Icon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 0
offset_right = 20.0
offset_bottom = 20.0
pivot_offset = Vector2(10, 10)
texture = ExtResource("2_tsibk")
expand_mode = 1
stretch_mode = 5

[node name="AnimActivate" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_btr66")
}

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
